[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/abilities/ENTITY/base_ability/base_ability.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/abilities/dash/dash.gd" type="Script" id=2]
[ext_resource path="res://src/abilities/dash/icon.png" type="Texture" id=3]

[node name="dash" instance=ExtResource( 1 )]
script = ExtResource( 2 )
icon = ExtResource( 3 )
tier = 2
weapon_tags = [ 0 ]

[node name="ghost_spawn" type="Timer" parent="." index="1"]
wait_time = 0.05

[node name="duration" type="Timer" parent="." index="2"]
one_shot = true

[connection signal="execute" from="." to="." method="_on_dash_execute"]
[connection signal="upgrade" from="." to="." method="_on_Dash_upgrade"]
[connection signal="timeout" from="ghost_spawn" to="." method="_on_ghost_spawn_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
